# ohos_vendor_ingchips

ing9168xx/: BUILD.gn  config.json  ohos.build
ing9168xx/hals/utils/sys_param/: hal_sys_param.c
ing9168xx/hals/utils/token/: hal_token.c
ing9168xx/kernel_configs/: debug.config
ing9168xx_xts/: BUILD.gn  config.json  ohos.build
ing9168xx_xts/hals/utils/sys_param/: BUILD.gn  vendor.para
ing9168xx_xts/hals/utils/token/: BUILD.gn
ing9168xx_xts/kernel_configs/: debug.config
ing9168xx_xts/tests/: BUILD.gn
ing9168xx_xts/tests/drivers/: BUILD.gn  driver_test.c
ing9168xx_xts/tests/fs/: BUILD.gn
ing9168xx_xts/tests/hello_demo/: BUILD.gn  main.c
ing9168xx_xts/tests/shell/: shell_test.c
ing9187xx_xts/: BUILD.gn  config.json  ohos.build
ing9187xx_xts/kernel_configs/: debug.config
ing9187xx_xts/tests/: BUILD.gn
ing9187xx_xts/tests/drivers/: BUILD.gn  uart_test.c
ing9187xx_xts/tests/fs/: fs_test.c
ing9187xx_xts/tests/shell/: BUILD.gn
ing9187xx_xts/third_party_adapter/mbedtls/: BUILD.gn
ing9188xx_xts/: BUILD.gn  config.json  ohos.build
ing9188xx_xts/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c  vendor.para
ing9188xx_xts/hals/utils/token/: BUILD.gn
ing9188xx_xts/kernel_configs/: debug.config
ing9188xx_xts/tests/: BUILD.gn
ing9188xx_xts/tests/drivers/: BUILD.gn  driver_test.h  gpio_test.c
ing9188xx_xts/tests/fs/: BUILD.gn
ing9188xx_xts/tests/hello_demo/: BUILD.gn
ing9188xx_xts/tests/shell/: BUILD.gn
ing9188xx_xts/third_party_adapter/mbedtls/: BUILD.gn
ing9188xx_xts/third_party_adapter/mbedtls/config/: mbedtls_config_ingchips.h
(+2 files in other folders)
