# Copyright (C) 2020 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.
import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/lite_subsystem.gni")
import("//kernel/liteos_m/liteos.gni")
group("ing9188xx_xts") {
        deps = [
            #"//test/xts/tools/lite/hctest:hctest",
            "hals/utils/sys_param:hal_sysparam",
            "hals/utils/token:hal_token_static",
            #"tests:drivers",
            #"tests:fs_test", 
            "tests:ohosdemo",
            #"tests:shell_test",
            "//build/lite:ohos",
        ]
}
